# loc-dashboard

./: .gitignore  pyproject.toml
src/loc_dashboard/: __init__.py  cli.py  extractor.py  visualizer.py
