[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loc-dashboard"
version = "0.1.0"
description = "Git repository LOC growth analysis with interactive HTML dashboard"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
loc-dashboard = "loc_dashboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
